# dynamic_factory

./: .gitignore  README.md  __init__.py  funcfactory.py  pyproject.toml
src/: __init__.py  config.py  dynamic_factory.py
