[tool.poetry]
name = "dynamic_factory"
version = "0.1.9"
description = "This module contain dynamic implementations of factory pattern"
authors = ["Wojciech Bogobowicz <wojciech.bogobowicz@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
